tests/error/function_scope_array_size_overflow.c
// fail "Array size cannot exceed 0x7fffffff."

unsigned main(){ 
    long long ident_0[8670853695427003083]; 
}
